--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2635,8 +2635,7 @@
             <kbd>Tab</kbd>:
             <ul>
               <li>When focus moves into the tab list, places focus on the active <code>tab</code> element.</li>
-              <li>When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is typically either the first focusable element inside the tab panel or the tab panel itself.</li>
-              <li>When the first element within a tab panel is not focusable, the <code>tabpanel</code> element should have <code>tabindex="0"</code> to make it part of the tab sequence.</li>
+              <li>When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is the tabpanel unless the first element containing meaningful content inside the tabpanel is focusable.</li>
             </ul>
           </li>
           <li>When focus is on a tab element in a horizontal tab list:
