Status of This Document section: Add summary of changes

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -27,9 +27,27 @@
   		<a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
   		It supports the
   		<a href="https://www.w3.org/TR/wai-aria-1.2/" class="specref"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a> [<cite><a class="bibref" href="#bib-wai-aria-1.2">WAI-ARIA-1.2</a></cite>]
-  		specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version provides authoring guidance for <a href="https://www.w3.org/TR/wai-aria-1.2/#changelog" class="specref">new and changed ARIA 1.2 features</a>.
+  		specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
+    </p>
+    <p>
+      This version includes additions and revisions to support changes to ARIA made in the current draft of version 1.2 of the specification.
+      Significant changes include:
+    </p>
+    <ul>
+      <li>Addition of guidance on the use of 18 roles that are new in ARIA 1.2.</li>
+      <li>Revisions to guidance on accessible naming to incorporate the new ARIA 1.2 prohibition of names on some elements and removal of naming requirements for other elements.</li>
+      <li>A complete rewrite of the combobox pattern and 4 combobox examples to illustrate changes made to the definition of the combobox role in ARIA 1.2.</li>
+      <li>Addition of a design pattern and example implementation for the new meter role.</li>
+      <li>Revisions to listbox and menu patterns and examples to reflect new support for named groups of options and menuitems.</li>
+    </ul>
+    <p>
+      A complete list of changes is available in the
+      <a href="#change_log_2019_november">change history.</a>
   	</p>
-    <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.2. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
+    <p>
+      This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.2.
+      To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>.
+    </p>
     <p>
       Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
       The Accessible Rich Internet Applications Working Group asks in particular:
