--- a/aria-practices.html
+++ b/aria-practices.html
@@ -26,7 +26,7 @@
   		of the
   		<a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
   		It supports the
-  		<a href="https://www.w3.org/TR/wai-aria-1.2/" class="specref"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a> [<cite><a class="bibref" href="#bib-wai-aria-1.2">WAI-ARIA-1.2</a></cite>]
+  		<a href="https://www.w3.org/TR/wai-aria-1.2/" class="specref"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a> [[WAI-ARIA-1.2]]
   		specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
     </p>
     <p>
@@ -3485,7 +3485,7 @@
             <li>The HTML <code>header</code> element defines a <code>banner</code> landmark when its context is the <code>body</code> element.</li>
 
             <li>
-              The HTML <code>header</code> element is not considered a <code>banner</code> landmark when it is descendant of any of following elements (see <a href="" class="html-mapping">HTML Accessibility Mappings</a> [[HTML-AAM]]):
+              The HTML <code>header</code> element is not considered a <code>banner</code> landmark when it is descendant of any of following elements (see <a href="" class="html-mapping">HTML Accessibility Mappings</a> [[HTML-AAM-1.0]]):
               <ul>
                 <li><code>article</code></li>
                 <li><code>aside</code></li>
@@ -3565,7 +3565,7 @@
             <li>The HTML <code>footer</code> element defines a <code>contentinfo</code> landmark when its context is the <code>body</code> element.</li>
 
             <li>
-              The HTML <code>footer</code> element is not considered a <code>contentinfo</code> landmark when it is descendant of any of following elements (see <a href="" class="html-mapping">HTML Accessibility Mappings</a> [[HTML-AAM]]):
+              The HTML <code>footer</code> element is not considered a <code>contentinfo</code> landmark when it is descendant of any of following elements (see <a href="" class="html-mapping">HTML Accessibility Mappings</a> [[HTML-AAM-1.0]]):
               <ul>
                 <li><code>article</code></li>
                 <li><code>aside</code></li>
