--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4813,7 +4813,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the search landmark.</li>
                   <li>Named using <code>aria-labelledby</code> if a visible label is present, otherwise with <code>aria-label</code>.</li>
-                  <li>See the <a href="aria_lh_search">Search Landmark</a> section.</li>
+                  <li>See the <a href="#aria_lh_search">Search Landmark</a> section.</li>
                 </ul>
               </td>
             </tr>
