--- a/aria-practices.html
+++ b/aria-practices.html
@@ -26,7 +26,7 @@
   		of the
   		<a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
   		It supports the
-  		<a href="https://www.w3.org/TR/wai-aria-1.2/" class="specref"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a> [[WAI-ARIA-1.2]]
+  		<a href="" class="specref"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a> [[WAI-ARIA-1.2]]
   		specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
     </p>
     <p>
@@ -1010,7 +1010,7 @@
               <li>In either case, focus is visually distinct from selection so users can readily see if a value is selected or not.</li>
             </ul>
         </li>
-          <li>If nodes in the tree are arranged horizontally (<a href="aria-orientation" class="property-reference">aria-orientation</a> is set to <code>horizontal</code>):
+          <li>If nodes in the tree are arranged horizontally (<a href="#aria-orientation" class="property-reference">aria-orientation</a> is set to <code>horizontal</code>):
             <ol>
               <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above, and vice versa.</li>
               <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above, and vice versa.</li>
