edited linitnig bug

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -50,8 +50,10 @@
         <li><a href="https://github.com/w3c/aria-practices/projects/10">Related Issues</a></li>
         <li><a href="../../#carousel">Design Pattern</a></li>
       </ul>
-    </na
-    centerTablist(controls, items);v
+    </nav>
+    <main>
+      <h1>Example of Image Carousel with Automatically Rotating Images using a Tablist</h1>
+        <p>
           Comments on this example are tracked in
           <a href="https://github.com/w3c/aria-practices/pull/1120">Pull request 1120.</a>
         </p>
