Correct tabs structure (issue #1301)

--- a/examples/landmarks/region.html
+++ b/examples/landmarks/region.html
@@ -59,8 +59,7 @@
                 <li class="active"><a id="tab1" href="#tabpanel1" aria-controls="tabpanel1" role="tab" data-toggle="tab">ARIA Techniques</a></li>
                 <li><a id="tab2" href="#tabpanel2" aria-controls="tabpanel2"  role="tab" data-toggle="tab">HTML Techniques</a></li>
               </ul>
-
-              <section aria-label="Coding Techniques">
+              <div class = "tab-content">
                 <div id="tabpanel1" aria-labelledby="tab1" role="tabpanel" class="tab-pane active">
                   <p>A <code>role="region"</code> attribute is used to define a <code>region</code> landmark.</p>
 
@@ -208,7 +207,7 @@
                     &lt;/main&gt;
                   </div>
                 </div>
-              </section>
+              </div>
             </section>
           </main>
         </div>
