Correct attribute in prose (issue 1301)

--- a/examples/landmarks/region.html
+++ b/examples/landmarks/region.html
@@ -63,7 +63,7 @@
                 <div id="tabpanel1" aria-labelledby="tab1" role="tabpanel" class="tab-pane active">
                   <p>A <code>role="region"</code> attribute is used to define a <code>region</code> landmark.</p>
 
-                  <h3>ARIA Example: Using <code>section[aria-labelledby]</code> attribute</h3>
+                  <h3>ARIA Example: Using <code>role="region"</code> attribute</h3>
                   <div class="code">
                     &lt;div role="main"&gt;
                     <br>
