--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -14,35 +14,8 @@
     <link rel="stylesheet" href="css/carousel-2-tablist.css">
     <script src="js/carousel-tablist.js" type="text/javascript"></script>
 
-    <script>
-
-      window.addEventListener('load', function() {
-        var tablists = document.querySelectorAll('.carousel-tablist');
-
-        for (var i = 0; i < tablists.length; i++) {
-          var tablist = tablists[i].querySelector('[role=tablist]');
-          var items   = tablists[i].querySelector('.carousel-items');
-          width1 = tablist.getBoundingClientRect().width;
-          width2 = items.getBoundingClientRect().width;
-          tablist.style.left = (((width2-width1)/2) - 30) +'px';
-        }
-      });
-
-      window.addEventListener('resize', function () {
-        var tablists = document.querySelectorAll('.carousel-tablist');
-
-        for (var i = 0; i < tablists.length; i++) {
-          var tablist = tablists[i].querySelector('[role=tablist]');
-          var items   = tablists[i].querySelector('.carousel-items');
-          width1 = tablist.getBoundingClientRect().width;
-          width2 = items.getBoundingClientRect().width;
-          tablist.style.left = (((width2-width1)/2) - 30) +'px';
-        }
-      });
-
-    </script>
-
-  </head>  <body>
+  </head>
+    <body>
     <nav aria-label="Related Links" class="feedback">
       <ul>
         <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
