Revise wording based on latest discussion to make the guidance more specific and actionable.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2345,7 +2345,8 @@
         Sliders typically have a slider thumb that can be moved along a bar or track to change the value of the slider.
       </p>
       <p class="warning">
-      Interaction with widgets implemented using this pattern may not be fully supported by touch based assistive technologies. Authors should fully test this widget before using it for a production ready project.
+        Users of touch-based assistive technologies may not be able to fully operate widgets that implement this pattern because APIs for capturing the necessary gestures and commands from assistive technologies are not yet available.
+        Authors should fully test widgets using this pattern with assistive technoligies before considering incorporation into production systems.
       </p>
       <section class="notoc">
         <h4>Examples</h4>
