--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2346,7 +2346,7 @@
       </p>
       <p class="warning">
         Users of touch-based assistive technologies may not be able to fully operate widgets that implement this pattern because APIs for capturing the necessary gestures and commands from assistive technologies are not yet available.
-        Authors should fully test widgets using this pattern with assistive technoligies before considering incorporation into production systems.
+        Authors should fully test widgets using this pattern with assistive technologies before considering incorporation into production systems.
       </p>
       <section class="notoc">
         <h4>Examples</h4>
