fixed bug with onclick behavior and documented option filtering as users type

--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -267,6 +267,7 @@
               <ul>
                 <li>Moves visual focus to the textbox.</li>
                 <li>Types the character in the textbox.</li>
+                <li>Filters options based on matching letters in the textbox.</li>
               </ul>
             </td>
           </tr>
