updated documentation abou filtering of options

--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -215,7 +215,7 @@
               <ul>
                 <li>Moves visual focus to the textbox.</li>
                 <li>Types the character in the textbox.</li>
-                <li>Filters options based on matching letters in the textbox.</li>
+                <li>Options in the listbox are <em>not</em> filtered based on the characters in the textbox.</li>
               </ul>
             </td>
           </tr>
