updated coverage report with latest master

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -482,7 +482,7 @@
     </section>
 
     <section class="widget" id="carousel">
-      <h3  data-aria-roles="group tablist"  data-aria-props="aria-live aria-roledescription">Carousel (Slide Show or Image Rotator)</h3>
+      <h3>Carousel (Slide Show or Image Rotator)</h3>
       <p>
         A carousel presents a set of items, referred to as slides, by sequentially displaying a subset of one or more slides.
         Typically, one slide is displayed at a time, and users can activate a next or previous slide control that hides the current slide and &quot;rotates&quot; the next or previous slide into view.
@@ -1390,7 +1390,7 @@
     </section>
 
     <section class="widget" id="grid">
-      <h3 data-aria-roles="grid gridcell row columnheader rowheader">Grids : Interactive Tabular Data and Layout Containers</h3>
+      <h3>Grids : Interactive Tabular Data and Layout Containers</h3>
 
       <p>
         A <a href="#grid" class="role-reference">grid</a> widget is a container that enables users to navigate the information or interactive elements it contains using directional navigation keys, such as arrow keys, <kbd>Home</kbd>, and <kbd>End</kbd>.
@@ -5928,7 +5928,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
   </section>
 
   <section id="gridAndTableProperties">
-    <h2 data-aria-roles="table grid treegrid">Grid and Table Properties</h2>
+    <h2>Grid and Table Properties</h2>
     <p>
       To fully present and describe a grid or table, in addition to parsing the headers, rows, and cells using the roles described in the
       <a href="#grid">grid pattern</a> or <a href="#table">table pattern</a>,
