Typo: character -> characters

--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -267,7 +267,7 @@
               <ul>
                 <li>Moves visual focus to the textbox.</li>
                 <li>Types the character in the textbox.</li>
-                <li>Options in the listbox are filtered based on character in the textbox.</li>
+                <li>Options in the listbox are filtered based on characters in the textbox.</li>
               </ul>
             </td>
           </tr>
