Correct ARIA sample code: had a closing main tag where it should have had closing div tag.

--- a/examples/landmarks/region.html
+++ b/examples/landmarks/region.html
@@ -93,7 +93,7 @@
                     &nbsp;&nbsp;&lt;/div&gt;
                     <br>
                     <br>
-                    &lt;/main&gt;
+                    &lt;/div&gt;
                   </div>
 
                 </div>
