--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -50,10 +50,18 @@
       <p>
         The following example implementation of the
         <a href="../../#carousel">carousel design pattern</a>
-        demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads and allow users to directly select which slide is presented.  Slide selection is typically provided using a series of circular buttons rendered over the rotating slides.
+        demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads.
+        This example also illustrates how to use the
+        <a href="../../#tabpanel">tabs pattern</a>
+        to provide users with a way to skip slides in the sequence by directly choosing which one to view.
+         Navigation among slides is provided by a series of circular buttons that function as tabs and are rendered over the rotating slides.
         Automatic rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
-        The accessibility features section that follows the example describes these features in detail.
+        The accessibility features section that follows the example describes these aspects of the design in detail.
       </p>
+      <p>Similar examples include:</p>
+      <ul>
+        <li><a href="carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load.</li>
+      </ul>
 
       <section>
         <h2>Example View Options</h2>
