Editorial revision to high contrast support description under accessibility features.

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -398,7 +398,7 @@
         <h3>Focus Styling of the Tablist and Tabs</h3>
         <ul>
           <li>When a tab receives focus, the entire tab list is also highlighted with a border as an affordance that indicates to users that arrow keys are used to navigate among controls in the group.</li>
-          <li>The CSS border width used for focus styling is changed from 0 to 2 pixels when the control receives focus to support visibility of the focus change in high contrast operating system settings.</li>
+          <li>The CSS border width used for focus styling is changed from 0 to 2 pixels when the control receives focus to support visibility of focus when operating system high contrast options are enabled.</li>
         </ul>
         <h3>Screen Reader Announcement of Slide Changes</h3>
         <p>
