Editorial revisions to keyboard documentation

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -431,13 +431,13 @@
                 <td>
                   <ul>
                     <li>Moves focus through interactive elements in the carousel.</li>
-                    <li>Rotation control and tablist buttons precede the slide content in the <kbd>Tab</kbd> sequence.</li>
+                    <li>Rotation control button and tab list precede the slide content in the <kbd>Tab</kbd> sequence.</li>
                   </ul>
                 </td>
               </tr>
               <tr data-test-id="rotation-enter-or-space-toggle">
                 <th><kbd>Enter</kbd> or <kbd>Space</kbd></th>
-                <td>Toggle the auto rotation of slides in the carousel.</td>
+                <td>Toggle automatic rotation of slides in the carousel.</td>
               </tr>
             </tbody>
           </table>
