Add links to carousel-2 from aria-practices main doc and carousel-1.

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -45,6 +45,10 @@
         For instance, rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
         The accessibility features section that follows the example describes these features in detail.
       </p>
+      <p>Similar examples include:</p>
+      <ul>
+        <li><a href="carousel-2.html">Example of Image Carousel with Automatically Rotating Images using a Tablist:</a> An image carousel that demonstrates using tabs to represent the controls that enable users to choose which slide to display.</li>
+      </ul>
 
       <section>
         <h2>Example View Options</h2>
