--- a/aria-practices.html
+++ b/aria-practices.html
@@ -508,10 +508,11 @@
       </ul>
 
       <section class="notoc">
-        <h4>Example</h4>
-        <p>
-          <a href="examples/carousel/carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load.
-        </p>
+        <h4>Examples</h4>
+        <ul>
+          <li><a href="examples/carousel/carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load.</li>
+          <li><a href="examples/carousel/carousel-2.html">Example of Image Carousel with Automatically Rotating Images using a Tablist:</a> An image carousel that demonstrates using tabs to represent the controls that enable users to choose which slide to display.</li>
+        </ul>
       </section>
 
       <section class="notoc">
