--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -43,7 +43,7 @@
         <a href="../../#carousel">carousel design pattern</a>
         demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads.
         For instance, rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
-        The accessibility features section that follows the example describes these features in detail.
+        The accessibility features section that follows the example describes these aspects of the design in detail.
       </p>
       <p>Similar examples include:</p>
       <ul>
