Minor editorial revision to carousel-1 accessibility features section description of color contrast support for consistency with carousel-2 wording.

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -284,8 +284,8 @@
         </ul>
         <h3>Color Contrast of Text and Rotation Controls</h3>
         <p>
-          In the view of this carousel where the controls and captions are displayed on top of the image, the background images can cause color contrast for the controls and text to become insufficient.
-          This view includes the following features to meet WCAG 2.1 color contrast requirements:
+          In the view of this carousel where the controls and captions are displayed on top of the image, background images could cause color contrast for the controls and text to become insufficient.
+          However, this view includes the following features to prevent this potential problem and ensure it meets WCAG 2.1 color contrast requirements:
         </p>
         <ul>
           <li>
