Update description of slide rotation control features
Co-Authored-By: Carolyn MacLeod <Carolyn_MacLeod@ca.ibm.com>

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -369,7 +369,7 @@
             Automatic rotation resumes when the mouse moves away from the carousel unless another condition that prevents rotation, such as keyboard focus, has been triggered.
           </li>
           <li>
-            Moving keyboard focus to any of the carousel content, including the next and previous slide elements, pauses automatic rotation.
+            Moving keyboard focus to any of the carousel content, including the tab elements, pauses automatic rotation.
             Automatic rotation only resumes if the user explicitly activates the <q>Play</q> button.
           </li>
           <li>The carousel also contains a rotation control button that can stop and start automatic rotation.
@@ -796,4 +796,3 @@
 
   </body>
 </html>
-
