Make title more concise per request from Jemma

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -47,7 +47,7 @@
       </p>
       <p>Similar examples include:</p>
       <ul>
-        <li><a href="carousel-2-tablist.html">Example of Image Carousel with Automatically Rotating Images using a Tablist:</a> An image carousel that demonstrates using tabs to represent the controls that enable users to choose which slide to display.</li>
+        <li><a href="carousel-2-tablist.html">Example of Rotating Image Carousel Using  a Tab List:</a> An image carousel that demonstrates using tabs to represent the controls that enable users to choose which slide to display.</li>
       </ul>
 
       <section>
