--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Example of Image Carousel with Automatically Rotating Images using  a Tablist | WAI-ARIA Authoring Practices 1.2</title>
+    <title>Example of Rotating Image Carousel Using  a Tab List | WAI-ARIA Authoring Practices 1.2</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -46,7 +46,7 @@
       </ul>
     </nav>
     <main>
-      <h1>Example of Image Carousel with Automatically Rotating Images using a Tablist</h1>
+      <h1>Example of Rotating Image Carousel Using  a Tab List</h1>
       <p>
         The following example implementation of the
         <a href="../../#carousel">carousel design pattern</a>
