--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -152,7 +152,7 @@
           <tr data-test-id="textbox-key-alt-down-arrow">
             <th><kbd>Alt + Down Arrow</kbd></th>
             <td>
-                Opens the listbox but no option is selected and visual focus and DOM focus stays on the textbox.
+                Opens the listbox without moving focus or changing selection.
             </td>
           </tr>
           <tr data-test-id="textbox-key-up-arrow">
