Add aria-hidden=false and focusable=false to svg in button

--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -55,7 +55,7 @@
               aria-expanded="false" aria-controls="cb1-listbox">
             <button id="cb1-button" tabindex="-1" aria-label="Open">
               <span class="arrow">
-                <svg width="18" height="16">
+                <svg width="18" height="16" aria-hidden="true" focusable="false">
                   <polygon points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
