--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -54,7 +54,7 @@
               aria-expanded="false" aria-controls="lb1">
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">
               <span class="arrow">
-                <svg width="18" height="16">
+                <svg width="18" height="16" aria-hidden="true" focusable="false">
                   <polygon points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
