Add information about the id attribute for all combobox examples; fixes #785

--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -337,6 +337,19 @@
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the popup element <strong>is</strong> displayed.</td>
           </tr>
+          <tr data-test-id="combobox-id">
+            <td></td>
+            <th scope="row">
+              <code>id="string"</code>
+            </th>
+            <td><code>input[type="text"]</code></td>
+            <td>
+              <ul>
+                <li>Referenced by <code>for</code> attribute of <code>label</code> element to provide an accessible name.</li>
+                <li>Recommended naming method for HTML input elements because clicking label focuses input.</li>
+              </ul>
+            </td>
+          </tr>
           <tr data-test-id="combobox-aria-activedescendant">
             <td></td>
             <th scope="row">
