Fixed documentation of escape key for the listbox

--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -168,8 +168,8 @@
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>If the listbox is displayed, closes it.</li>
-                <li>If the listbox is not displayed, clears the textbox.</li>
+                <li>Closes the listbox.</li>
+                <li>Sets visual focus on the textbox.</li>
                </ul>
             </td>
           </tr>
