Revise Escape key documentation to reflect expected behavior

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -105,8 +105,8 @@
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>Clears the textbox</li>
                 <li>If the grid is displayed, closes it.</li>
+                <li>If the grid is not displayed, clears the textbox.</li>
               </ul>
             </td>
           </tr>
@@ -150,9 +150,8 @@
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>Closes the grid popup.</li>
-                <li>Sets focus on the textbox.</li>
-                <li>Clears the textbox.</li>
+                <li>Closes the grid.</li>
+                <li>Sets visual focus on the textbox.</li>
               </ul>
             </td>
           </tr>
